# vulkayes-thesis

./: .gitignore  .gitmodules  README.md  tmp.latex
assets/: abstract.tex  bibliography.json  code.theme  header-defense.tex  header.tex  spec_validations.json  template.latex  title.tex
assets/diagrams/: object_dependency_graph.puml
codes/cpp-equivalents/: .gitignore  README.md
codes/snippet-benches/: .gitignore  Cargo.toml  README.md
codes/snippet-benches/benches/: collecting_iterators.rs
codes/teapot-benches/: .gitignore  Cargo.toml  MT-Cargo.toml  README.md  ST-Cargo.toml  renderdoc_profile.cap  run_benches.sh
codes/teapot-benches/benches/: .gitignore
codes/teapot-benches/benches/linux_nv/: params.md
codes/teapot-benches/benches/mac/: params.md
codes/teapot-benches/benches/script/: __main__.py  no_sleep.py
codes/teapot-benches/builds/: linux64_ash  macos64_ash  macos64_vulkayes
codes/teapot-benches/builds/src/assets/: shader.frag  shader.vert  vert.spv
codes/teapot-benches/src/: data.rs  lib.rs  mark.rs
codes/teapot-benches/src/assets/: frag.spv  shader.frag  shader.vert  vert.spv
cpp-equivalents/surface/: cpp.out  rs.out  surface.cppapp  surface.rsapp
documents/: abstract.md  abstract.tex  backmatter.md  defense.md  drop_order.md  handling_generics.md  implementation.md  implementation_plan.md  progress.md  related_work.md  swapchain_recreate.md  thanks.md  thanks.tex  thesis.md  user_code.md  vulkan_introduction.md
documents/design/: design.md  drop_order.md
documents/evaluation/: benchmark.md  evaluation.md  safety.md  user_code.md
documents/implementation/: abstraction.md  cargo_features.md  generics.md  implementation.md  swapchain_recreate.md
media/: object_dependency_graph.puml  object_lifetime.puml
misc/: extract_valid_usage.js  gen.sh  gen_all.sh  style.css
scripts/: gen.sh  generate.sh  generate_defense.sh  include_filter.py  spec_extractor.py  word_count.py
(+19 files in other folders)
