[package]
name = "snippet-benches"
version = "0.1.0"
authors = ["edward"]
edition = "2018"

[dependencies]

[dev-dependencies]
criterion = { version = "0.3", features = ["real_blackbox"] }

smallvec = "1.3.0"
reusable-memory = "0.2.1"
bumpalo = { version = "3.2.1", features = ["collections"] }

[[bench]]
name = "mixed_dispatch"
harness = false

[[bench]]
name = "mixed_dispatch_fn"
harness = false

[[bench]]
name = "collecting_iterators"
harness = false
